feat: implement temporary password reset (#19)
